# excel-mcp-integration

./: .dockerignore  .gitignore  ANALYSIS_INDEX.md  CODEBASE_COMPLETION_ANALYSIS.md  CONTRIBUTING.md  CSV_IMPORT_FIX_COMPLETE.md  DATA_VALIDATION_ISSUE_RESOLVED.md  DEPLOYMENT_GUIDE.md  DOCKER_STATUS.md  DOWNLOAD_LINK_ISSUE_RESOLVED.md  Dockerfile  EXCEL_TOOLS_OPENWEBUI_INSTALLATION.md  FILE_DOWNLOAD_FIX_COMPLETE.md  FINAL_PRODUCTION_STATUS.md  HEADERS_ONLY_FINAL_FIX_COMPLETE.md  HEADERS_ONLY_ISSUE_RESOLVED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPENWEBUI_INTEGRATION_GUIDE.md  OPENWEBUI_INTEGRATION_TROUBLESHOOTING.md  OPENWEBUI_READY.md  OPENWEBUI_TOOL_ALIGNMENT.md  OPENWEBUI_TOOL_CLEANUP_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REBUILD_COMPLETE.md  ROBUST_SESSION_MANAGEMENT_COMPLETE.md  SERVICE_STATUS.md  SESSION_ID_ISSUE_FINAL_RESOLVED.md  SESSION_MANAGEMENT_FIX_COMPLETE.md  SOTA_IMPLEMENTATION_COMPLETE.md  STATE_OF_THE_ART_ANALYSIS.md  deploy-k8s.sh  docker-compose.yml  excel-mcp-deployment.yaml  excel_tools_openwebui.py  excel_tools_openwebui_simple.py  export_test.csv  (+7 more)
config/: openwebui_functions.json  openwebui_functions_k8s.json  openwebui_tools.json  openwebui_tools_enhanced.json  openwebui_tools_enhanced_k8s.json  openwebui_tools_k8s.json
docs/: AGENTS.md  DEPLOYMENT_GUIDE.md  GEMINI.md  OPENWEBUI_PIPE_SETUP.md  OPENWEBUI_SETUP.md  OPENWEBUI_TOOLS_GUIDE.md  openwebui_tool_setup.md  project_plan.md  system_prompt.txt  system_prompt_enhanced.txt
scripts/: entrypoint.sh  start_server.sh
src/: main.py  (+4 more)
(+1 files in other folders)
